Fix download button

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -208,6 +208,7 @@ button {
 .btn-search {
   color: #FFF !important;
   background-color: #00749b !important;
+  text-transform: none !important;
 }
 
 @media screen and (max-width: 1000px) {
